@@ -1,3 +1,4 @@
+	* fix DHT announce stall when adding torrent immediately after startup
 	* fix bug in enumeration of network interfaces on windows
 	* fix padfile issue
 	* fix PMTUd bug
